# pinferencia

./: .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dev.Dockerfile  README.md  Readme.md  Readme.zh.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test.py  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -----.md  ----.md  bug---.md  bug_report.md  documentation-improvement.md
.github/workflows/: api-test.yml  ci.yml  codeql-analysis.yml  e2e-test.yml  install-built-package.yml  mkdocs.yml  ossar.yml  python-app.yml  pytorch.yml
0.1/: index.html  sitemap.xml
0.1/en/: index.html
0.1/en/install/: index.html
0.1/en/overview/: index.html
0.1/en/restapi/: index.html
0.1/frontend/requirements/: index.html
0.1/get-started/home/: index.html
0.1/get-started/pytorch-mnist/: index.html
0.1/get-started/serve-a-json-model/: index.html
0.1/handlers/: index.html
0.1/models/home/: index.html
0.1/models/machine-learning/: index.html
0.1/pinferencia-is-different/: index.html
0.1/rc/handlers/: index.html
0.1/rc/install/: index.html
0.1/rc/overview/: index.html
0.1/rc/pinferencia-is-different/: index.html
0.1/rc/restapi/: index.html
0.1/re/: CNAME  index.html  requirements.txt
0.1/re/pinferencia-is-different/: index.html
0.1/re/restapi/: index.html
0.1/zh/: index.html
0.1/zh/handlers/: index.html
0.1/zh/install/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/en/: CNAME  index.html
0.2.1/en/overrides/: home.html  main.html
0.2.1/get-started/other-models/: index.html
0.2.1/get-started/pytorch-mnist/: index.html
0.2.1/how-to-guides/custom-templates/: index.html
0.2.1/how-to-guides/schema/: index.html
0.2.1/introduction/overview/: index.html
0.2.1/rc/: index.html  requirements.txt
0.2.1/rc/overrides/: home.html
0.2.1/re/: index.html
0.2.1/reference/cli/: index.html
0.2.1/reference/restapi/: index.html
0.2.1/search/: search_index.json
0.2.1/underneathall/js/: custom.js
0.2.1/zh/: index.html
0.2.1/zh/overrides/: home.html
0.2/en/: index.html
0.2/get-started/install/: index.html
0.2/get-started/introduction/: index.html
0.2/get-started/other-models/: index.html
0.2/rc/: index.html
0.2/rc/overrides/: home.html
0.2/re/: index.html  requirements.txt
0.2/search/: search_index.json
0.2/zh/: index.html
assets/stylesheets/: home.less
docs/: index.md  index.rc.md  index.re.md  index.zh.md  requirements.txt  test.md  test.zh.md
docs/handlers/: index.md  index.zh.md
docs/home/: index.md  index.rc.md  index.zh.md
docs/install/: index.md  index.zh.md
docs/models/: index.md
docs/overrides/: home.html  home.rc.html  home.zh.html  main.html
docs/overview/: index.md  index.rc.md  index.zh.md
docs/pinferencia-is-different/: index.md  index.rc.md  index.zh.md
docs/restapi/: index.md  index.zh.md
docs/src/: handlers.md  install.zh.md  who-needs.md  who-needs.zh.md
e2e_tests/: README.md
en/handlers/: index.html
en/install/: index.html
en/overview/: index.html
en/pinferencia-is-different/: index.html
en/restapi/: index.html
examples/custom_frontend/: app.py  frontend.py
examples/custom_template/: frontend.py
examples/demo/: Dockerfile  demo_app.py  prepare.py  start.sh
examples/doc/: app.py
examples/json_model/: app.py  test.py
examples/mountain/: app.py  test.py
frontend/requirements/: index.html
get-started/home/: index.html
get-started/other-models/: index.html
get-started/pytorch-mnist/: index.html
get-started/serve-a-function/: index.html
get-started/serve-a-json-model/: index.html
handlers/: index.html
install/: index.html
latest/create-client/: index.html
latest/en/: index.html
latest/handlers/: index.html
latest/install/: index.html
latest/overrides/: home.html  main.html
latest/overview/: index.html
latest/pinferencia-is-different/: index.html
latest/rc/: index.html
latest/re/: index.html
latest/restapi/: index.html
latest/zh/: index.html
models/home/: index.html
models/machine-learning/: index.html
models/register/: index.html
overview/: index.html
pinferencia/: __init__.py  api_manager.py  app.py  config.py  context.py  decorators.py  handlers.py  main.py  model_manager.py  repository.py  swagger.py  task.py  tools.py  utils.py
pinferencia-is-different/: index.html
pinferencia/frontend/: app.py  config.py  model_manager.py
pinferencia/handlers/: __init__.py  base.py  dill.py  joblib.py  pytorch.py
pinferencia/static/: swagger-ui-bundle.js  swagger-ui-bundle.js.map  theme-default.css  theme-flattop.css  theme-newspaper.css
rc/: index.html
rc/handlers/: index.html
rc/install/: index.html
rc/overview/: index.html
rc/pinferencia-is-different/: index.html
rc/restapi/: index.html
re/handlers/: index.html
re/install/: index.html
re/overview/: index.html
re/pinferencia-is-different/: index.html
re/restapi/: index.html
restapi/: index.html
scripts/: README.md  backend-api-test-using-docker.sh  build-and-install-using-docker.sh  e2e-test-using-docker.sh  pytest-using-docker.sh  run-unit-tests.sh  setup-dependencies.sh  test-pypi-release.sh  test-pytorch.sh
search/: search_index.json
static/: redoc.standalone.js  swagger-ui.css.map  theme-feeling-blue.css  theme-feelingblue.css  theme-flattop.css  theme-material.css  theme-monokai.css  theme-muted.css  theme-newspaper.css  theme-outline.css
tests/: conftest.py  test_api_manager.py  test_handlers.py
tests/api_tests/: app.py  conftest.py  test_list.py  test_predict.py
tests/e2e_tests/: README.md  conftest.py  demo_app.py
tests/test_docs/: docs.py  test_mkdocs.py
tests/test_handlers/: test_dill.py  test_joblib.py
tests/test_repository/: test_load.py  test_register.py
tests/unittest/: test_api_manager.py  test_tools.py
zh/handlers/: index.html
zh/install/: index.html
zh/overview/: index.html
zh/pinferencia-is-different/: index.html
zh/restapi/: index.html
(+893 files in other folders)
