[tool.poetry]
name = "pinferencia"
version = "0.1.2"
description = "Aims to be the Simplest Machine Learning Model Inference Server"
authors = ["Jiuhe Wang <wjiuhe@gmail.com>"]
license = "Apache-2.0 License"
readme = "Readme.md"
homepage = "https://pinferencia.underneathall.app"
repository = "https://github.com/underneathall/pinferencia"
keywords = ["Machine Learning", "Inference", "Serve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.75.1"
numpy = [
    {version = "^1.19.5", python = ">=3.6, <3.7"},
    {version = "^1.20.3", python = ">=3.7, <3.8"},
    {version = "^1.22.3", python = "^3.8"}
]
uvicorn = {extras = ["standard"], version = "^0.16.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
requests = "^2.27.1"
dill = "^0.3.4"
joblib = "^1.1.0"

[tool.poetry.extras]
uvicorn = ["uvicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
