[tool.poetry]
name = "pinferencia"
version = "0.2.0alpha1"
description = "Aims to be the Simplest Machine Learning Model Inference Server"
authors = ["Jiuhe Wang <wjiuhe@gmail.com>"]
license = "Apache-2.0 License"
readme = "Readme.md"
homepage = "https://pinferencia.underneathall.app"
repository = "https://github.com/underneathall/pinferencia"
keywords = ["Machine Learning", "Inference", "Serve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.75.1"
requests = "^2.27.1"
numpy = [
    {version = "1.19.5", python = ">=3.6, <3.7"},
    {version = "^1.20.3", python = ">=3.7, <3.8"},
    {version = "^1.22.3", python = "^3.8"}
]
click = "^8.0.4"
uvicorn = "^0.16.0"
streamlit = {version = "^1.10.0", optional = true}

# streamlit dependencies
altair = [
    {version = "4.1.0", python = ">=3.6, <3.7"},
    {version = "^4.2.0", python = "^3.7"}
]
argon2-cffi = "^21.3.0"
argon2-cffi-bindings = "^21.2.0"
async-generator = [
    {version = "1.10", python = ">=3.6, <3.7"},
]
attrs = "^21.4.0"
backcall = "^0.2.0"
# backports.zoneinfo = "^0.2.1"
beautifulsoup4 = [
    {version = "^4.11.1", python = "^3.7"},
]
bleach = [
    {version = "4.1.0", python = ">=3.6, <3.7"},
    {version = "^5.0.0", python = "^3.7"}
]
blinker = "^1.4"
cachetools = [
    {version = "4.2.4", python = ">=3.6, <3.7"},
    {version = "^5.2.0", python = "^3.7"},
]
certifi = "^2022.5.18.1"
cffi = "^1.15.0"
charset-normalizer = "^2.0.12"
commonmark = "^0.9.1"
dataclasses = [
    {version = "0.8", python = ">=3.6, <3.7"}
]
debugpy = [
    {version = "^1.6.0", python = "^3.7"}
]
decorator = "^5.1.1"
defusedxml = "^0.7.1"
entrypoints = "^0.4"
gitdb = "^4.0.9"
GitPython = [
    {version = "3.1.18", python = ">=3.6, <3.7"},
    {version = "^3.1.27", python = "^3.7"}
]
idna = "^3.3"
# importlib-metadata = "^4.8.3"
importlib-resources = [
    {version = "5.4.0", python = ">=3.6, <3.7"},
    {version = "^5.7.1", python = "^3.7"}
]
ipykernel = [
    {version = "5.5.6", python = ">=3.6, <3.7"},
    {version = "^6.13.0", python = "^3.7"}
]
ipython = [
    {version = "7.16.3", python = ">=3.6, <3.7"},
    {version = "7.34.0", python = ">=3.7, <3.8"},
    {version = "^8.4.0", python = "^3.8"}
]
ipython-genutils = "^0.2.0"
ipywidgets = "^7.7.0"
jedi = [
    {version = "0.17.2", python = ">=3.6, <3.7"},
    {version = "^0.18.1", python = "^3.7"}
]
Jinja2 = [
    {version = "3.0.3", python = ">=3.6, <3.7"},
    {version = "^3.1.2", python = "^3.7"}
]
jsonschema = [
    {version = "3.2.0", python = ">=3.6, <3.7"},
    {version = "^4.6.0", python = "^3.7"}
]
jupyter-client = [
    {version = "7.1.2", python = ">=3.6, <3.7"},
    {version = "^7.3.1", python = "^3.7"}
]
jupyter-core = [
    {version = "4.9.2", python = ">=3.6, <3.7"},
    {version = "^4.10.0", python = "^3.7"}
]
jupyterlab-pygments = [
    {version = "0.1.2", python = ">=3.6, <3.7"},
    {version = "^0.2.2", python = "^3.7"}
]
jupyterlab-widgets = "^1.1.0"
MarkupSafe = [
    {version = "2.0.1", python = ">=3.6, <3.7"},
    {version = "^2.1.1", python = "^3.7"}
]
mistune = "^0.8.4"
nbclient = [
    {version = "0.5.9", python = ">=3.6, <3.7"},
    {version = "^0.6.4", python = "^3.7"}
]
nbconvert = [
    {version = "6.0.7", python = ">=3.6, <3.7"},
    {version = "^6.5.0", python = "^3.7"}
]
nbformat = [
    {version = "5.1.3", python = ">=3.6, <3.7"},
    {version = "^5.4.0", python = "^3.7"}
]
nest-asyncio = "^1.5.5"
notebook = "^6.4.10"
packaging = "^21.3"
pandas = [
    {version = "1.1.5", python = ">=3.6, <3.7.1"},
    {version = "1.3.5", python = ">=3.7.1, <3.8"},
    {version = "^1.4.2", python = "^3.8"}
]
pandocfilters = "^1.5.0"
parso = [
    {version = "0.7.1", python = ">=3.6, <3.7"},
    {version = "^0.8.3", python = "^3.7"}
]
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
Pillow = [
    {version = "8.4.0", python = ">=3.6, <3.7"},
    {version = "^9.1.1", python = "^3.7"}
]
prometheus-client = "^0.14.1"
prompt-toolkit = "^3.0.29"
protobuf = [
    {version = "3.19.4", python = ">=3.6, <3.7"},
    {version = "^3.20.1", python = "^3.7"}
]
psutil = [
    {version = "^5.9.1", python = "^3.7"}
]
ptyprocess = "^0.7.0"
pyarrow = [
    {version = "6.0.1", python = ">=3.6, <3.7"},
    {version = "^8.0.0", python = "^3.7"}
]
pycparser = "^2.21"
pydeck = [
    {version = "0.6.2", python = ">=3.6, <3.7"},
    {version = "^0.7.1", python = "^3.7"}
]
Pygments = "^2.12.0"
Pympler = "^1.0.1"
pyparsing = [
    {version = "3.0.7", python = ">=3.6, <3.7"},
    {version = "^3.0.9", python = "^3.7"}
]
pyrsistent = [
    {version = "0.18.0", python = ">=3.6, <3.7"},
    {version = "^0.18.1", python = "^3.7"}
]
python-dateutil = "^2.8.2"
pytz = "^2022.1"
pytz-deprecation-shim = "^0.1.0.post0"
pyzmq = "^23.1.0"
# rich = "^12.4.4"
semver = "^2.13.0"
Send2Trash = "^1.8.0"
six = "^1.16.0"
smmap = "^5.0.0"
terminado = [
    {version = "0.12.1", python = ">=3.6, <3.7"},
    {version = "^0.15.0", python = "^3.7"}
]
testpath = [
    {version = "^0.6.0", python = ">=3.6, <3.7"},
]
toml = "^0.10.2"
toolz = "^0.11.2"
tornado = "^6.1"
traitlets = [
    {version = "4.3.3", python = ">=3.6, <3.7"},
    {version = "^5.2.2.post1", python = "^3.7"}
]
typing_extensions = [
    {version = "4.1.1", python = ">=3.6, <3.7"},
    {version = "^4.2.0", python = "^3.7"}
]
tzdata = "^2022.1"
tzlocal = "^4.2"
urllib3 = "^1.26.9"
validators = "^0.19.0"
watchdog = "^2.1.8"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
widgetsnbextension = "^3.6.0"
zipp = [
    {version = "3.6.0", python = ">=3.6, <3.7"},
    {version = "^3.8.0", python = "^3.7"}
]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
dill = "^0.3.4"
joblib = "^1.1.0"
flake8 = "^4.0.1"
strictyaml = "^1.6.1"

[tool.poetry.extras]
streamlit = ["streamlit"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.poetry.scripts]
pinfer = "pinferencia.main:main"
